<resources>
    <string name="app_name">Музей образования</string>
    <string name="player_time_zero">00:00</string>

    <string name="zal_istoria_obraz">История образования\nХангаласского улуса</string>
    <string name="zal_alex_narod">Алексеевское народное училище</string>
    <string name="zal_class_soviet">Класс советского периода</string>
    <string name="zal_school_in_soviet">Школа в советское время</string>
    <string name="zal_new_history_school">Новая история школы</string>
    <string name="zal_kraeved_ugolok">Краеведческий уголок</string>

    <string name="exposition_desc">описание экспозиции в разработке</string>
    <string name="exhibit_desc">описание экспоната в разработке</string>

    <string name="zal_okt_seven_years">Октемская семилетняя школа</string>
    <string name="player_title">Заголовок</string>
    <string name="map">map</string>
    <string name="scan">Сканировать</string>
    <string name="quest_game">Квест игра</string>
    <string name="quest_game_rules_title">Правила игры</string>
    <string name="exhibit_description">Описание экспоната</string>

    <string name="quest_game_rules">В данной игре Вам нужно находить экспонаты по их описаниям или вопросам. Когда найдете нужный экспонат - нажмите зеленую кнопку внизу и отсканируйте QR код экспоната.</string>
    <string name="find_the_exhibit">Найдите экспонат:</string>
    <string name="exhibits_count">Экспонатов найдено (ваши очки):</string>
    <string name="skip_question">Пропустить вопрос</string>
    <string name="skip_warning">Можете пропустить текущий вопрос,\nно за это нужно заплатить одно очко</string>
</resources>