<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--First museum room-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--Map-->
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_map1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:translationZ="1dp"/>
                <!-- Photo and title -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp">
                    <!-- Photo -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/zal_alex_narod"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/zal_alex_narod"/>
                    <!-- Title -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/zal_alex_narod"
                        android:textSize="18sp"
                        android:textColor="@color/primaryTextColor"/>
                </LinearLayout>
            </RelativeLayout>

            <!--Second museum room-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--Map-->
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_map2"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:translationZ="1dp"/>
                <!-- Photo and title -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp">
                    <!-- Photo -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/zal_okt_sevenyears"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/zal_okt_seven_years"/>
                    <!-- Title -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/zal_okt_seven_years"
                        android:textSize="18sp"
                        android:textColor="@color/primaryTextColor"/>
                </LinearLayout>
            </RelativeLayout>

            <!--Third museum room-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--Map-->
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_map2"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:translationZ="1dp"/>
                <!-- Photo and title -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp">
                    <!-- Photo -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/zal_alex_narod"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/zal_alex_narod"/>
                    <!-- Title -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/zal_alex_narod"
                        android:textSize="18sp"
                        android:textColor="@color/primaryTextColor"/>
                </LinearLayout>
            </RelativeLayout>

            <!-- Space for scroll -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp"/>

        </LinearLayout>

    </ScrollView>

    <include
        layout="@layout/player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>